--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758500.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180494181-1-320x200.jpg">川普：1月15日我在白宫签第一阶段协议</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757478.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_2212-320x200.jpeg">港人感佩法轮功传真相 恭祝李大师新年好</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
@@ -9,7 +9,6 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757865.md#1">陈思敏：中共5G现况虚火过盛</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757360.md#1">洪微：中共新军事战略受挫</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757068.md#1">王友群：面对“八国联军”清军为何兵败如山倒</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756696.md#1">夏小强：从天命看韩国瑜能否当选总统</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755947.md#1">颜丹：教育经济挤水分 中共忙找替罪羊</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754433.md#1">俞晓薇：明慧新年祝福值得中国和世界深思</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754348.md#1">明智：浅评香港连续剧《再向虎山行》</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
@@ -30,9 +30,7 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750485.md#1">红色资金介入大选 台查获最大两岸地下汇兑</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758425.md#1">《大师链》急退台湾市场 分析：反渗透法效果</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757755.md#1">“人权与生俱来” 英巴士公司老板赞港人抗争</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757478.md#1">港人感佩法轮功传真相 恭祝李大师新年好</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756804.md#1">【翻墙必看】新年之际武汉惊传SARS疫情</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747600.md#1">【2019盘点】中共监控之十大黑科技</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757604.md#1">【直播中】新年前夜港人“和你 Shop”</a><br>
@@ -42,6 +40,8 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757201.md#1">香港学者：武汉疫情严重性与SARS相当</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756845.md#1">《拍案惊奇》2020台湾大选两类观点引关注</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756796.md#1">华为子公司高层大换血 接任者身份神秘</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747241.md#1">【2019盘点】A股上市公司十大丑闻</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756598.md#1">中国工程院院士李宁受审 贪污经费3756万</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757804.md#1">反渗透法三读 受渗透介选最重可判5年刑</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757756.md#1">防堵大陆肺炎疫情 台疾管署：持续落实检疫</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757425.md#1">中国银行：人民币将在6.75至7.35间震荡</a><br>
@@ -51,11 +51,9 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757048.md#1">习近平将直播新年贺词 网民盼宣布中共解体</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756450.md#1">外媒：企业债或成大陆明年最大灰犀牛</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754952.md#1">赖中强：反渗透法处罚拿中共钱介选的人</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747241.md#1">【2019盘点】A股上市公司十大丑闻</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756431.md#1">内蒙古三厅官被处分 通辽原政法委书记涉黑</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756447.md#1">台湾大选 北京布线投票所盯场 补助台商返台</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756598.md#1">中国工程院院士李宁受审 贪污经费3756万</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11753936.md#1">“山东号”过台海 中共航母战力受质疑</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756475.md#1">揭秘中共黑客APT10为何是云端幽灵</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756555.md#1">山西一在建隧道坍塌 5人死亡1人被困</a><br>
@@ -88,8 +86,10 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755722.md#1">传刘鹤本周末赴美签署第一阶段贸易协议</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755101.md#1">波特王对中共小粉红讲真相：民主自由可贵</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754189.md#1">【翻墙必看】中共就香港问题欺骗全世界</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br>二零一九年十二月二十九日，来自宜兰 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754403.md#1">天津强拆世界级别墅群 数百业主走投无路</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749398.md#1">甘肃庆阳市法轮功学员被迫害情况综述（中）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753546.md#1">重庆中学生在学校坠亡 家人被禁见遗体</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748971.md#1">北京女子劳教所前所长李继荣的罪行</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753695.md#1">中共代理人加速政治分化香港 限制港人自由</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754376.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754376.md#1">业界人士：美中贸易真正的大戏在技术领域</a><br>美中日前达成第一阶段贸易协议后，有 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754038.md#1">圣诞期间 大陆到香港游客锐减九成</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753833.md#1">两大因素 韩国央行预计大陆明年GDP增长破6%</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753756.md#1">2019中资股闪崩惨剧频发 惊现98%跌幅</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753458.md#1">中共补贴超千亿  涉华为企业获金额最多</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752769.md#1">北京各行业利润下滑 房价由高位下跌近两成</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11739570.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51345108-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>对美中关系来说，2019年是充满挑战和 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754482.md#1">湖南“操场埋尸案” 原校长黄炳松获刑15年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754416.md#1">遭台湾扣查  向心写信向香港政府求助</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11753937.md#1">美中科技战 2020年聚焦五大关键问题</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753440.md#1">台大选辩论 网站列蔡韩宋发言即时事实查核</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br>数月以来，中国大陆多省持续严重干旱 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754339.md#1">重庆涪陵一居民楼着火 6人死亡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754205.md#1">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753030.md#1">山西国企煤矿集团子公司发生事故 5死1伤</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752431.md#1">杭州一合资化工厂仓库着火</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748552.md#1">湖北应城4.9级地震 600多户民居现裂缝</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LO3OB-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1">白宫：若朝鲜试射远程导弹 美将采取行动</a><br>白宫国家安全顾问罗伯特?奥布赖恩（R ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754591.md#1">每日三退声明精选（2019/12/29）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753463.md#1">台大选辩论 聚焦一国两制、香港、反渗透法</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753758.md#1">美情报助俄破获恐怖袭击 普京致电感谢川普</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753504.md#1">浙江卫视秀年度综艺 高以翔事件只字未提惹议</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br>近日，有贴文称，沈阳航空航天大学一 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播预告】新唐人电视台2020跨年缤纷夜</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br>大陆汽车行业今年深陷泥潭，销量下滑 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br>二零一九年十二月二十九日，来自宜兰 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754403.md#1">天津强拆世界级别墅群 数百业主走投无路</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749398.md#1">甘肃庆阳市法轮功学员被迫害情况综述（中）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753546.md#1">重庆中学生在学校坠亡 家人被禁见遗体</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748971.md#1">北京女子劳教所前所长李继荣的罪行</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753695.md#1">中共代理人加速政治分化香港 限制港人自由</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754376.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754376.md#1">业界人士：美中贸易真正的大戏在技术领域</a><br>美中日前达成第一阶段贸易协议后，有 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754038.md#1">圣诞期间 大陆到香港游客锐减九成</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753833.md#1">两大因素 韩国央行预计大陆明年GDP增长破6%</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753756.md#1">2019中资股闪崩惨剧频发 惊现98%跌幅</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753458.md#1">中共补贴超千亿  涉华为企业获金额最多</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752769.md#1">北京各行业利润下滑 房价由高位下跌近两成</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11743871.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1102230313011227-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>钟医生是辞去国内工作出国留学的，随 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754482.md#1">湖南“操场埋尸案” 原校长黄炳松获刑15年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754416.md#1">遭台湾扣查  向心写信向香港政府求助</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11753937.md#1">美中科技战 2020年聚焦五大关键问题</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753440.md#1">台大选辩论 网站列蔡韩宋发言即时事实查核</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753656.md#1">网络间谍组织监控亚洲NGO 后台疑是中共</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br>数月以来，中国大陆多省持续严重干旱 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754339.md#1">重庆涪陵一居民楼着火 6人死亡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754205.md#1">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753030.md#1">山西国企煤矿集团子公司发生事故 5死1伤</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752431.md#1">杭州一合资化工厂仓库着火</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748552.md#1">湖北应城4.9级地震 600多户民居现裂缝</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LO3OB-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1">白宫：若朝鲜试射远程导弹 美将采取行动</a><br>白宫国家安全顾问罗伯特?奥布赖恩（R ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754591.md#1">每日三退声明精选（2019/12/29）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753463.md#1">台大选辩论 聚焦一国两制、香港、反渗透法</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753758.md#1">美情报助俄破获恐怖袭击 普京致电感谢川普</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753504.md#1">浙江卫视秀年度综艺 高以翔事件只字未提惹议</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754408.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/11/GettyImages-1066011770-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br>12月30日，中国南方科技大学前副教授 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播预告】新唐人电视台2020跨年缤纷夜</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744548.md#1">2020年天津报纸《城市快报》将休刊</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br>大陆汽车行业今年深陷泥潭，销量下滑 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
